[gd_scene load_steps=12 format=2]

[ext_resource path="res://RainIsoMainContents/Resources/JumpPad.png" type="Texture" id=1]
[ext_resource path="res://RainIsoMainContents/Resources/JumpPadFrame4.png" type="Texture" id=2]
[ext_resource path="res://RainIsoMainContents/Resources/JumpPadFrame5.png" type="Texture" id=3]
[ext_resource path="res://RainIsoMainContents/Resources/JumpPadFrame1.png" type="Texture" id=4]
[ext_resource path="res://RainIsoMainContents/Resources/JumpPadFrame7.png" type="Texture" id=5]
[ext_resource path="res://RainIsoMainContents/Resources/JumpPadFrame3.png" type="Texture" id=6]
[ext_resource path="res://RainIsoMainContents/Resources/JumpPadFrame6.png" type="Texture" id=7]
[ext_resource path="res://RainIsoMainContents/Resources/JumpPadFrame2.png" type="Texture" id=8]
[ext_resource path="res://RainIsoMainContents/Scenes/JumpPadHorizontalRight.gd" type="Script" id=9]

[sub_resource type="Animation" id=1]
resource_name = "JumpPad"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("../JumpPad/JumpPad12:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 1.3, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 5 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.3672, 25.8354 )

[node name="JumpPad" type="Area2D"]
collision_mask = 3
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3, 4 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 5.0
anims/JumpPad = SubResource( 1 )

[node name="JumpPadTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -15.8821, 4 )
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_JumpPad_body_entered"]
[connection signal="timeout" from="JumpPadTimer" to="." method="_on_JumpPadTimer_timeout"]
